--- a/HandsOnMachineLearning/handson-ml-master/10_introduction_to_artificial_neural_networks.ipynb
+++ b/HandsOnMachineLearning/handson-ml-master/10_introduction_to_artificial_neural_networks.ipynb
@@ -2051,7 +2051,8 @@
     "        for iteration in range(mnist.train.num_examples // batch_size):\n",
     "            X_batch, y_batch = mnist.train.next_batch(batch_size)\n",
     "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
-    "        accuracy_val, loss_val, accuracy_summary_str, loss_summary_str = sess.run([accuracy, loss, accuracy_summary, loss_summary], feed_dict={X: X_valid, y: y_valid})\n",
+    "        accuracy_val, loss_val, accuracy_summary_str, loss_summary_str = \\\n",
+    "            sess.run([accuracy, loss, accuracy_summary, loss_summary], feed_dict={X: X_valid, y: y_valid})\n",
     "        file_writer.add_summary(accuracy_summary_str, epoch)\n",
     "        file_writer.add_summary(loss_summary_str, epoch)\n",
     "        if epoch % 5 == 0:\n",
